# Minane-Wash-Auto

./: DEMARRER.bat  DEMARRER_RESEAU.bat  Guide_utilisateur.docx  README.md  analyse.py  assistant_ia.py  audit.py  auth.py  compiler.bat  crm.py  database.py  exports.py  generer_docs.py  lancer.bat  lavage_meckhe.db  log.txt  mailer.py  main.py  pyproject.toml  requirements.txt  serveur_reseau.py  services.py  sync_worker.py  ui.py  views.py
